--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "history": "^5.0.0",
+    "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
