--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.9.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "antd": "^4.13.1",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.0-beta2",
     "formik": "^2.2.6",
-    "history": "^5.0.0",
+    "history": "^4.10.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
+    "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-device-detect": "^1.17.0",
