--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta2",
-    "formik": "^2.2.6",
     "history": "^4.10.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
@@ -24,8 +23,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "web-vitals": "^1.0.1",
-    "yup": "^0.32.9"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
