--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/client/node_modules
-/server/node_modules
+/node_modules
+/node_modules
 /.pnp
 .pnp.js
 
@@ -18,7 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-/server/.env
+.env
 
 npm-debug.log*
 yarn-debug.log*
