--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Server awesome video game",
   "main": "server.js",
+  "engines": {
+    "node": "14.x",
+    "npm": "6.14.5"
+  },  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "babel-node server.js",
@@ -11,6 +15,8 @@
   "author": "phidnhh",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -19,8 +25,6 @@
     "mongoose": "^5.11.15"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "nodemon": "^2.0.7"
   }
 }
