--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "netlify-build": "cd client && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -48,6 +49,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:5000/"
+  }
 }
